# hdwallet

./: COPYRIGHT  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: account.rs  cmd.rs  ganache.rs  hash.rs  hdk.rs  lib.rs  main.rs  message.rs  mnemonic.rs  rand.rs  serialization.rs  shamir.rs  transaction.rs  typeddata.rs
src/account/: address.rs  prehashed.rs  public.rs  signature.rs
src/cmd/: address.rs  export.rs  hash.rs  hex.rs  new.rs  public_key.rs  sign.rs
src/hdk/: path.rs
src/mnemonic/: language.rs  wordlist.rs
src/shamir/: cypher.rs  ff.rs  secret.rs  wordlist.rs
src/transaction/: accesslist.rs  eip1559.rs  eip2930.rs  legacy.rs  rlp.rs
tests/: new.rs  sign_typeddata.rs
tests/util/: mod.rs
