[package]
name = "hdwallet"
version = "0.1.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum hierarchical deterministic wallet implementation"
documentation = "https://docs.rs/hdwallet"
homepage = "https://github.com/nlordell/hdwallet"
repository = "https://github.com/nlordell/hdwallet"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
ethnum = "1"
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
pbkdf2 = { version = "0.10", default-features = false }
secp256k1 = { version = "0.21", features = ["recovery"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
hex-literal = "0.3"
maplit = "1"
