[package]
name = "hdwallet"
version = "0.2.3"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Hierarchical deterministic wallet for Ethereum"
documentation = "https://docs.rs/hdwallet"
homepage = "https://github.com/nlordell/hdwallet"
repository = "https://github.com/nlordell/hdwallet"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ethaddr = { version = "0.1", features = ["macros", "serde"] }
ethnum = { version = "1", features = ["serde"] }
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
k256 = "0.11"
pbkdf2 = { version = "0.11", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
hex-literal = "0.3"
maplit = "1"
