[package]
name = "hdwallet"
version = "0.2.4"
authors = ["Nicholas Rodrigues Lordello <n@lordello.net>"]
edition = "2021"
description = "Hierarchical deterministic wallet for Ethereum"
documentation = "https://docs.rs/hdwallet"
homepage = "https://codeberg.org/nlordell/hdwallet"
repository = "https://codeberg.org/nlordell/hdwallet"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ethaddr = { version = "0.2", features = ["serde"] }
ethdigest = { version = "0.4", features = ["serde"] }
ethnum = { version = "1", features = ["serde"] }
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
k256 = "0.13"
num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
hex-literal = "1"
maplit = "1"
